@@ -4,14 +4,13 @@ import com.google.inject.Inject;
 import com.google.inject.Singleton;
 import lombok.RequiredArgsConstructor;
 import net.flectone.pulse.data.database.Database;
-import net.flectone.pulse.data.database.sql.MailSQL;
+import net.flectone.pulse.data.database.sql.mail.MailSQL;
 import net.flectone.pulse.model.entity.FPlayer;
 import net.flectone.pulse.module.command.mail.model.Mail;
 import org.jspecify.annotations.NonNull;
-import org.jspecify.annotations.Nullable;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 /**
  * Data Access Object for mail data in FlectonePulse.
@@ -32,7 +31,7 @@ public class MailDAO implements BaseDAO<MailSQL> {
     }
 
     @Override
-    public Class<MailSQL> sqlClass() {
+    public Class<? extends MailSQL> sqlClass() {
         return MailSQL.class;
     }
 
@@ -42,16 +41,17 @@ public class MailDAO implements BaseDAO<MailSQL> {
      * @param sender the player who sent the mail
      * @param receiver the player who received the mail
      * @param message the mail message content
-     * @return the created mail record, or null if players are unknown
+     * @return the created mail record, or empty if players are unknown
      */
-    public @Nullable Mail insert(@NonNull FPlayer sender, @NonNull FPlayer receiver, @NonNull String message) {
-        if (sender.isUnknown() || receiver.isUnknown()) return null;
+    @NonNull
+    public Optional<Mail> insert(@NonNull FPlayer sender, @NonNull FPlayer receiver, @NonNull String message) {
+        if (database.isClosed()) return Optional.empty();
+        if (sender.isUnknown() || receiver.isUnknown()) return Optional.empty();
 
-        return inTransaction(mailSQL -> {
-            long date = System.currentTimeMillis();
-            int id = mailSQL.insert(date, sender.id(), receiver.id(), message);
-            return new Mail(id, date, sender.id(), receiver.id(), message);
-        });
+        long date = System.currentTimeMillis();
+        int id = withHandle(sql -> sql.insert(date, sender.id(), receiver.id(), message));
+
+        return Optional.of(new Mail(id, date, sender.id(), receiver.id(), message));
     }
 
     /**
@@ -60,6 +60,8 @@ public class MailDAO implements BaseDAO<MailSQL> {
      * @param mail the mail record to delete
      */
     public void delete(@NonNull Mail mail) {
+        if (database.isClosed()) return;
+
         useHandle(sql -> sql.invalidate(mail.id()));
     }
 
@@ -70,7 +72,8 @@ public class MailDAO implements BaseDAO<MailSQL> {
      * @return list of received mail messages, empty list if player is unknown
      */
     public List<Mail> getReceiver(FPlayer fPlayer) {
-        if (fPlayer.isUnknown()) return Collections.emptyList();
+        if (database.isClosed()) return List.of();
+        if (fPlayer.isUnknown()) return List.of();
 
         return withHandle(sql -> sql.findByReceiver(fPlayer.id()));
     }
@@ -82,7 +85,8 @@ public class MailDAO implements BaseDAO<MailSQL> {
      * @return list of sent mail messages, empty list if player is unknown
      */
     public List<Mail> getSender(FPlayer fPlayer) {
-        if (fPlayer.isUnknown()) return Collections.emptyList();
+        if (database.isClosed()) return List.of();
+        if (fPlayer.isUnknown()) return List.of();
 
         return withHandle(sql -> sql.findBySender(fPlayer.id()));
     }
