@@ -4,13 +4,12 @@ import com.google.inject.Inject;
 import com.google.inject.Singleton;
 import lombok.RequiredArgsConstructor;
 import net.flectone.pulse.data.database.Database;
-import net.flectone.pulse.data.database.sql.ModerationSQL;
+import net.flectone.pulse.data.database.sql.moderation.ModerationSQL;
 import net.flectone.pulse.model.entity.FPlayer;
 import net.flectone.pulse.model.util.Moderation;
 import org.jspecify.annotations.NonNull;
 import org.jspecify.annotations.Nullable;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -33,21 +32,8 @@ public class ModerationDAO implements BaseDAO<ModerationSQL> {
     }
 
     @Override
-    public Class<ModerationSQL> sqlClass() {
+    public Class<? extends ModerationSQL> sqlClass() {
         return ModerationSQL.class;
-    }
-
-    /**
-     * Gets all moderation actions for a player.
-     *
-     * @param player the player
-     * @param type the moderation type
-     * @param server the server ID
-     * @return list of moderation actions, empty list if player is unknown
-     */
-    public List<Moderation> get(@NonNull FPlayer player, Moderation.Type type, @Nullable String server) {
-        if (player.isUnknown()) return Collections.emptyList();
-        return withHandle(sql -> sql.findByPlayerAndType(player.id(), type.name(), server));
     }
 
     /**
@@ -62,7 +48,9 @@ public class ModerationDAO implements BaseDAO<ModerationSQL> {
      * @return list of valid moderation actions matching the criteria
      */
     public List<Moderation> getValid(@NonNull FPlayer player, Moderation.Type type, @Nullable String server, int limit, int offset) {
-        if (player.isUnknown()) return Collections.emptyList();
+        if (database.isClosed()) return List.of();
+        if (player.isUnknown()) return List.of();
+
         return withHandle(sql -> sql.findValidByPlayerAndType(
                 player.id(),
                 type.name(),
@@ -83,6 +71,8 @@ public class ModerationDAO implements BaseDAO<ModerationSQL> {
      * @return list of valid moderation actions matching the criteria
      */
     public List<Moderation> getValid(Moderation.Type type, @Nullable String server, int limit, int offset) {
+        if (database.isClosed()) return List.of();
+
         return withHandle(sql -> sql.findValidByType(
                 type.name(),
                 System.currentTimeMillis(),
@@ -101,6 +91,8 @@ public class ModerationDAO implements BaseDAO<ModerationSQL> {
      * @return an Optional containing the moderation if found and valid, or empty otherwise
      */
     public Optional<Moderation> getValidById(@Nullable String server, int id) {
+        if (database.isClosed()) return Optional.empty();
+
         return withHandle(sql -> sql.findValidById(
                 System.currentTimeMillis(),
                 server,
@@ -116,6 +108,8 @@ public class ModerationDAO implements BaseDAO<ModerationSQL> {
      * @return list of player names
      */
     public List<String> getValidPlayersNames(Moderation.Type type, @Nullable String server) {
+        if (database.isClosed()) return List.of();
+
         return withHandle(sql -> sql.findValidPlayerNamesByType(
                 type.name(),
                 System.currentTimeMillis(),
@@ -133,6 +127,8 @@ public class ModerationDAO implements BaseDAO<ModerationSQL> {
      * @return the count of valid moderations matching the criteria
      */
     public int getTotalValidCount(FPlayer fPlayer, Moderation.Type type, @Nullable String server) {
+        if (database.isClosed()) return 0;
+
         return withHandle(sql -> sql.getTotalValidCountByPlayerAndType(
                 fPlayer.id(),
                 type.name(),
@@ -150,6 +146,8 @@ public class ModerationDAO implements BaseDAO<ModerationSQL> {
      * @return the count of valid moderations matching the criteria
      */
     public int getTotalValidCount(Moderation.Type type, @Nullable String server) {
+        if (database.isClosed()) return 0;
+
         return withHandle(sql -> sql.getTotalValidCountByType(
                 type.name(),
                 System.currentTimeMillis(),
@@ -170,31 +168,22 @@ public class ModerationDAO implements BaseDAO<ModerationSQL> {
      * @return the created moderation action, or null if player is unknown
      */
     public @Nullable Moderation insert(@NonNull FPlayer target, long date, long time, String reason, int moderatorId, Moderation.Type type, String server) {
+        if (database.isClosed()) return null;
         if (target.isUnknown()) return null;
 
-        return inTransaction(sql -> {
-            int id = sql.insert(
-                    target.id(),
-                    date,
-                    time,
-                    reason,
-                    moderatorId,
-                    type.name(),
-                    server
-            );
+        int id = withHandle(sql -> sql.insert(target.id(), date, time, reason, moderatorId, type.name(), server));
 
-            return new Moderation(
-                    id,
-                    target.id(),
-                    date,
-                    time,
-                    reason,
-                    moderatorId,
-                    type,
-                    true,
-                    server
-            );
-        });
+        return new Moderation(
+                id,
+                target.id(),
+                date,
+                time,
+                reason,
+                moderatorId,
+                type,
+                true,
+                server
+        );
     }
 
     /**
@@ -205,6 +194,8 @@ public class ModerationDAO implements BaseDAO<ModerationSQL> {
      * @param server the server ID (can be null for global invalidation)
      */
     public void updateValid(int id, @Nullable String server) {
+        if (database.isClosed()) return;
+
         useHandle(sql -> sql.invalidate(id, server));
     }
 
@@ -217,6 +208,8 @@ public class ModerationDAO implements BaseDAO<ModerationSQL> {
      * @param server the server ID (can be null for global invalidation)
      */
     public void updateValid(int playerId, Moderation.@NonNull Type type, @Nullable String server) {
+        if (database.isClosed()) return;
+
         useHandle(sql -> sql.invalidate(playerId, type.name(), server));
     }
 
