@@ -11,7 +11,6 @@ import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.util.Collections;
 import java.util.List;
 
 public record FImage(String link) {
@@ -24,12 +23,12 @@ public record FImage(String link) {
         connection.setRequestProperty("User-Agent", WebUtil.USER_AGENT);
 
         BufferedImage bufferedImage = ImageIO.read(connection.getInputStream());
-        if (bufferedImage == null) return Collections.emptyList();
+        if (bufferedImage == null) return List.of();
 
         int width = bufferedImage.getWidth();
         int height = bufferedImage.getHeight();
 
-        if (height * width >= 8 * 1024 * 1024) return Collections.emptyList();
+        if (height * width >= 8 * 1024 * 1024) return List.of();
 
         int stepSize = Math.max((int) Math.ceil(bufferedImage.getWidth() / 48.0), 1);
         int stepSquared = stepSize * stepSize;
