@@ -13,18 +13,22 @@ import net.flectone.pulse.config.Permission;
 import net.flectone.pulse.config.setting.PermissionSetting;
 import net.flectone.pulse.execution.dispatcher.MessageDispatcher;
 import net.flectone.pulse.model.FColor;
-import net.flectone.pulse.model.entity.FEntity;
 import net.flectone.pulse.model.entity.FPlayer;
 import net.flectone.pulse.model.event.EventMetadata;
 import net.flectone.pulse.module.ModuleCommand;
+import net.flectone.pulse.module.command.chatcolor.listener.ChatcolorProxyMessageListener;
 import net.flectone.pulse.platform.controller.ModuleCommandController;
 import net.flectone.pulse.platform.controller.ModuleController;
 import net.flectone.pulse.platform.provider.CommandParserProvider;
+import net.flectone.pulse.platform.registry.ListenerRegistry;
+import net.flectone.pulse.platform.registry.ProxyRegistry;
 import net.flectone.pulse.platform.sender.ProxySender;
 import net.flectone.pulse.processing.converter.ColorConverter;
 import net.flectone.pulse.service.FPlayerService;
+import net.flectone.pulse.service.SocialService;
 import net.flectone.pulse.util.checker.PermissionChecker;
 import net.flectone.pulse.util.constant.ModuleName;
+import net.flectone.pulse.util.constant.SettingText;
 import net.flectone.pulse.util.file.FileFacade;
 import org.apache.commons.lang3.StringUtils;
 import org.incendo.cloud.context.CommandContext;
@@ -40,6 +44,7 @@ public class ChatcolorModule implements ModuleCommand<Localization.Command.Chatc
 
     private final FileFacade fileFacade;
     private final FPlayerService fPlayerService;
+    private final SocialService socialService;
     private final PermissionChecker permissionChecker;
     private final ProxySender proxySender;
     private final ColorConverter colorConverter;
@@ -47,6 +52,8 @@ public class ChatcolorModule implements ModuleCommand<Localization.Command.Chatc
     private final MessageDispatcher messageDispatcher;
     private final ModuleController moduleController;
     private final ModuleCommandController commandModuleController;
+    private final ListenerRegistry listenerRegistry;
+    private final ProxyRegistry proxyRegistry;
 
     @Override
     public void onEnable() {
@@ -64,6 +71,10 @@ public class ChatcolorModule implements ModuleCommand<Localization.Command.Chatc
 
             return commandBuilder.optional(promptPlayer, commandParserProvider.offlinePlayerParser(), commandParserProvider.playerSuggestionPermission(true, permission().other()));
         });
+
+        if (proxyRegistry.hasEnabledProxy()) {
+            listenerRegistry.register(ChatcolorProxyMessageListener.class);
+        }
     }
 
     @Override
@@ -122,12 +133,12 @@ public class ChatcolorModule implements ModuleCommand<Localization.Command.Chatc
         String promptColor = commandModuleController.getPrompt(this, 1);
         Optional<String> optionalClear = commandContext.optional(promptColor + " 1");
         if (optionalClear.isPresent() && optionalClear.get().equalsIgnoreCase("clear")) {
-            setColors(fTarget, fColorType.get(), Collections.emptySet());
+            setColors(fTarget, fColorType.get(), Set.of());
             return;
         }
 
         Int2ObjectArrayMap<FColor> newFColors = new Int2ObjectArrayMap<>();
-        fTarget.fColors().getOrDefault(fColorType.get(), Collections.emptySet())
+        socialService.loadColors(fTarget).getOrDefault(fColorType.get(), Set.of())
                 .forEach(fColor -> newFColors.put(fColor.number(), fColor));
 
         for (int i = 0; i < fColorConfig().defaultColors().size(); i++) {
@@ -174,8 +185,8 @@ public class ChatcolorModule implements ModuleCommand<Localization.Command.Chatc
     }
 
     @Override
-    public Localization.Command.Chatcolor localization(FEntity sender) {
-        return fileFacade.localization(sender).command().chatcolor();
+    public Localization.Command.Chatcolor localization(FPlayer fPlayer) {
+        return fileFacade.localization(socialService.getSetting(fPlayer, SettingText.LOCALE)).command().chatcolor();
     }
 
     public Message.Format.FColor fColorConfig() {
@@ -183,14 +194,13 @@ public class ChatcolorModule implements ModuleCommand<Localization.Command.Chatc
     }
 
     private void setColors(FPlayer fPlayer, FColor.Type type, Set<FColor> newFColors) {
-        Map<FColor.Type, Set<FColor>> fColors = fPlayer.fColors();
-        Set<FColor> oldFColors = fColors.getOrDefault(type, Collections.emptySet());
+        Map<FColor.Type, Set<FColor>> fColors = socialService.loadColors(fPlayer);
+        Set<FColor> oldFColors = fColors.getOrDefault(type, Set.of());
 
         UUID metadataUUID = UUID.randomUUID();
 
         if (!oldFColors.equals(newFColors)) {
-            fPlayer = fPlayer.withFColors(type, newFColors);
-            fPlayerService.saveColors(fPlayer);
+            socialService.saveColors(fPlayer, type, newFColors);
 
             // update proxy players
             proxySender.send(fPlayer, ModuleName.COMMAND_CHATCOLOR, _ -> {}, metadataUUID);
