@@ -3,6 +3,7 @@ package net.flectone.pulse.module.integration;
 import com.google.common.collect.ImmutableSet;
 import com.google.inject.Inject;
 import com.google.inject.Injector;
+import com.google.inject.Provider;
 import com.google.inject.Singleton;
 import net.flectone.pulse.model.entity.FEntity;
 import net.flectone.pulse.model.entity.FPlayer;
@@ -25,6 +26,7 @@ import net.flectone.pulse.module.integration.triton.BukkitTritonModule;
 import net.flectone.pulse.module.integration.vault.BukkitVaultModule;
 import net.flectone.pulse.platform.adapter.PlatformServerAdapter;
 import net.flectone.pulse.platform.controller.ModuleController;
+import net.flectone.pulse.platform.registry.ListenerRegistry;
 import net.flectone.pulse.processing.resolver.ReflectionResolver;
 import net.flectone.pulse.util.checker.BukkitDatapackChecker;
 import net.flectone.pulse.util.checker.PaperDatapackChecker;
@@ -37,13 +39,12 @@ import org.bukkit.metadata.MetadataValue;
 import org.bukkit.permissions.Permissible;
 import org.jspecify.annotations.NonNull;
 
-import java.util.Collections;
 import java.util.Set;
 
 @Singleton
 public class BukkitIntegrationModule extends MinecraftIntegrationModule {
 
-    private final PlatformServerAdapter platformServerAdapter;
+    private final Provider<PlatformServerAdapter> platformServerAdapterProvider;
     private final ReflectionResolver reflectionResolver;
     private final ModuleController moduleController;
     private final Injector injector;
@@ -52,13 +53,14 @@ public class BukkitIntegrationModule extends MinecraftIntegrationModule {
     @Inject
     public BukkitIntegrationModule(FileFacade fileFacade,
                                    FLogger fLogger,
-                                   PlatformServerAdapter platformServerAdapter,
+                                   Provider<PlatformServerAdapter> platformServerAdapterProvider,
                                    ReflectionResolver reflectionResolver,
+                                   ListenerRegistry listenerRegistry,
                                    ModuleController moduleController,
                                    Injector injector) {
-        super(fileFacade, fLogger, platformServerAdapter, reflectionResolver, moduleController, injector);
+        super(fileFacade, fLogger, platformServerAdapterProvider, reflectionResolver, listenerRegistry, moduleController, injector);
         
-        this.platformServerAdapter = platformServerAdapter;
+        this.platformServerAdapterProvider = platformServerAdapterProvider;
         this.reflectionResolver = reflectionResolver;
         this.moduleController = moduleController;
         this.injector = injector;
@@ -69,6 +71,7 @@ public class BukkitIntegrationModule extends MinecraftIntegrationModule {
     public ImmutableSet.Builder<@NonNull Class<? extends ModuleSimple>> childrenBuilder() {
         ImmutableSet.Builder<@NonNull Class<? extends ModuleSimple>> builder = super.childrenBuilder();
 
+        PlatformServerAdapter platformServerAdapter = platformServerAdapterProvider.get();
         if (platformServerAdapter.hasProject("AdvancedBan")) {
             builder.add(BukkitAdvancedBanModule.class);
         }
@@ -200,15 +203,11 @@ public class BukkitIntegrationModule extends MinecraftIntegrationModule {
             return getInstance(BukkitVaultModule.class).getGroups();
         }
 
-        return Collections.emptySet();
+        return Set.of();
     }
 
     @Override
     public boolean isVanished(FEntity sender) {
-        if (containsEnabledChild(BukkitSuperVanishModule.class)) {
-            return getInstance(BukkitSuperVanishModule.class).isVanished(sender);
-        }
-
         Player player = Bukkit.getPlayer(sender.uuid());
         if (player == null) return false;
 
