@@ -16,7 +16,6 @@ import org.bukkit.entity.Player;
 import org.bukkit.plugin.Plugin;
 import org.bukkit.plugin.RegisteredServiceProvider;
 
-import java.util.Collections;
 import java.util.Set;
 
 @Singleton
@@ -85,7 +84,7 @@ public class BukkitVaultIntegration implements FIntegration {
     }
 
     public Set<String> getGroups() {
-        if (chat == null) return Collections.emptySet();
+        if (chat == null) return Set.of();
 
         return Set.of(chat.getGroups());
     }
