@@ -11,7 +11,6 @@ import net.flectone.pulse.platform.controller.ModuleController;
 import net.flectone.pulse.util.constant.ModuleName;
 import net.flectone.pulse.util.file.FileFacade;
 
-import java.util.Collections;
 import java.util.Set;
 
 @Singleton
@@ -66,7 +65,7 @@ public class BukkitVaultModule implements ModuleSimple {
     }
 
     public Set<String> getGroups() {
-        if (!moduleController.isEnable(this)) return Collections.emptySet();
+        if (!moduleController.isEnable(this)) return Set.of();
 
         return vaultIntegration.getGroups();
     }
