@@ -16,19 +16,19 @@ import net.flectone.pulse.config.Command;
 import net.flectone.pulse.config.Localization;
 import net.flectone.pulse.execution.pipeline.MessagePipeline;
 import net.flectone.pulse.model.FColor;
-import net.flectone.pulse.model.inventory.MinecraftDialog;
 import net.flectone.pulse.model.entity.FPlayer;
 import net.flectone.pulse.model.event.message.context.MessageContext;
+import net.flectone.pulse.model.inventory.MinecraftDialog;
 import net.flectone.pulse.module.command.chatsetting.ChatsettingModule;
 import net.flectone.pulse.module.command.chatsetting.handler.ChatsettingHandler;
 import net.flectone.pulse.module.command.chatsetting.model.SubMenuItem;
 import net.flectone.pulse.platform.controller.MinecraftDialogController;
 import net.flectone.pulse.service.FPlayerService;
+import net.flectone.pulse.service.SocialService;
 import net.kyori.adventure.text.Component;
 import org.apache.commons.lang3.Strings;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 import java.util.function.Consumer;
@@ -43,14 +43,19 @@ public class MinecraftDialogMenuBuilder implements MenuBuilder {
     private final MinecraftDialogController dialogController;
     private final ChatsettingHandler chatsettingHandler;
     private final FPlayerService fPlayerService;
+    private final SocialService socialService;
 
     @Override
     public void open(FPlayer fPlayer, UUID fTargetUUID) {
         FPlayer fTarget = fPlayerService.getFPlayer(fTargetUUID);
 
         Localization.Command.Chatsetting localization = chatsettingModule.localization(fPlayer);
-        MessageContext headerContext = messagePipeline.createContext(fPlayer, fTarget, localization.inventory().trim());
-        Component header = messagePipeline.build(headerContext);
+        Component header = messagePipeline.build(MessageContext.builder()
+                .sender(fPlayer)
+                .receiver(fTarget)
+                .message(localization.inventory().trim())
+                .build()
+        );
 
         DialogBody dialogBody = new PlainMessageDialogBody(new PlainMessage(Component.empty(), 10));
 
@@ -61,7 +66,7 @@ public class MinecraftDialogMenuBuilder implements MenuBuilder {
                 false,
                 DialogAction.CLOSE,
                 List.of(dialogBody),
-                Collections.emptyList()
+                List.of()
         );
 
         MinecraftDialog.Builder dialogBuilder = new MinecraftDialog.Builder(commonDialogData, chatsettingModule.config().modern().columns());
@@ -83,15 +88,21 @@ public class MinecraftDialogMenuBuilder implements MenuBuilder {
         int slot = checkbox.types().get(messageType);
         if (slot == -1) return dialogBuilder;
 
-        boolean enabled = fTarget.isSetting(messageType);
+        boolean enabled = socialService.isSetting(fTarget, messageType);
 
-        String title = chatsettingModule.getCheckboxTitle(fPlayer, messageType, enabled);
-        MessageContext titleContext = messagePipeline.createContext(fPlayer, fTarget, title);
-        Component componentTitle = messagePipeline.build(titleContext);
+        Component componentTitle = messagePipeline.build(MessageContext.builder()
+                .sender(fPlayer)
+                .receiver(fTarget)
+                .message(chatsettingModule.getCheckboxTitle(fPlayer, messageType, enabled))
+                .build()
+        );
 
-        String lore = chatsettingModule.getCheckboxLore(fPlayer, enabled);
-        MessageContext loreContext = messagePipeline.createContext(fPlayer, fTarget, lore);
-        Component componentLore = messagePipeline.build(loreContext);
+        Component componentLore = messagePipeline.build(MessageContext.builder()
+                .sender(fPlayer)
+                .receiver(fTarget)
+                .message(chatsettingModule.getCheckboxLore(fPlayer, enabled))
+                .build()
+        );
 
         String id = "fp_" + UUID.randomUUID();
 
@@ -109,13 +120,19 @@ public class MinecraftDialogMenuBuilder implements MenuBuilder {
                     FPlayer finalFTarget = fPlayerService.getFPlayer(fTarget);
                     boolean currentEnabled = status.toBoolean();
 
-                    String invertTitle = chatsettingModule.getCheckboxTitle(fPlayer, messageType, !currentEnabled);
-                    MessageContext invertTitleContext = messagePipeline.createContext(fPlayer, finalFTarget, invertTitle);
-                    Component componentInvertTitle = messagePipeline.build(invertTitleContext);
+                    Component componentInvertTitle = messagePipeline.build(MessageContext.builder()
+                            .sender(fPlayer)
+                            .receiver(finalFTarget)
+                            .message(chatsettingModule.getCheckboxTitle(fPlayer, messageType, !currentEnabled))
+                            .build()
+                    );
 
-                    String invertLore = chatsettingModule.getCheckboxLore(fPlayer, !currentEnabled);
-                    MessageContext invertLoreContext = messagePipeline.createContext(fPlayer, finalFTarget, invertLore);
-                    Component componentInvertLore = messagePipeline.build(invertLoreContext);
+                    Component componentInvertLore = messagePipeline.build(MessageContext.builder()
+                            .sender(fPlayer)
+                            .receiver(finalFTarget)
+                            .message(chatsettingModule.getCheckboxLore(fPlayer, !currentEnabled))
+                            .build()
+                    );
 
                     ActionButton invertButton = new ActionButton(
                             new CommonButtonData(componentInvertTitle, componentInvertLore, chatsettingModule.config().modern().buttonWidth()),
@@ -123,8 +140,6 @@ public class MinecraftDialogMenuBuilder implements MenuBuilder {
                     );
 
                     dialogController.changeButton(fPlayer, dialog, id, invertButton);
-
-                    chatsettingModule.saveSetting(finalFTarget, messageType);
                 });
     }
 
@@ -144,11 +159,17 @@ public class MinecraftDialogMenuBuilder implements MenuBuilder {
         String title = messages.length > 0 ? messages[0] : "";
         String lore = messages.length > 1 ? String.join("<br>", Arrays.copyOfRange(messages, 1, messages.length)) : "";
 
-        MessageContext titleContext = messagePipeline.createContext(fTarget, title);
-        Component componentTitle = messagePipeline.build(titleContext);
+        Component componentTitle = messagePipeline.build(MessageContext.builder()
+                .sender(fTarget)
+                .message(title)
+                .build()
+        );
 
-        MessageContext loreContext = messagePipeline.createContext(fTarget, lore);
-        Component componentLore = messagePipeline.build(loreContext);
+        Component componentLore = messagePipeline.build(MessageContext.builder()
+                .sender(fTarget)
+                .message(lore)
+                .build()
+        );
 
         String id = "fp_chat";
 
@@ -178,11 +199,17 @@ public class MinecraftDialogMenuBuilder implements MenuBuilder {
         String title = messages.length > 0 ? messages[0] : "";
         String lore = messages.length > 1 ? String.join("<br>", Arrays.copyOfRange(messages, 1, messages.length)) : "";
 
-        MessageContext titleContext = messagePipeline.createContext(fTarget, title);
-        Component componentTitle = messagePipeline.build(titleContext);
+        Component componentTitle = messagePipeline.build(MessageContext.builder()
+                .sender(fTarget)
+                .message(title)
+                .build()
+        );
 
-        MessageContext loreContext = messagePipeline.createContext(fTarget, lore);
-        Component componentLore = messagePipeline.build(loreContext);
+        Component componentLore = messagePipeline.build(MessageContext.builder()
+                .sender(fTarget)
+                .message(lore)
+                .build()
+        );
 
         String id = "fp_fcolor_" + type.ordinal();
 
@@ -215,7 +242,7 @@ public class MinecraftDialogMenuBuilder implements MenuBuilder {
                 false,
                 DialogAction.CLOSE,
                 List.of(dialogBody),
-                Collections.emptyList()
+                List.of()
         );
 
         MinecraftDialog.Builder dialogBuilder = new MinecraftDialog.Builder(commonDialogData, chatsettingModule.config().modern().columns())
@@ -231,11 +258,17 @@ public class MinecraftDialogMenuBuilder implements MenuBuilder {
             String title = messages.length > 0 ? messages[0] : "";
             String lore = messages.length > 1 ? String.join("<br>", Arrays.copyOfRange(messages, 1, messages.length)) : "";
 
-            MessageContext titleContext = messagePipeline.createContext(fTarget, title);
-            Component componentTitle = messagePipeline.build(titleContext);
+            Component componentTitle = messagePipeline.build(MessageContext.builder()
+                    .sender(fTarget)
+                    .message(title)
+                    .build()
+            );
 
-            MessageContext loreContext = messagePipeline.createContext(fTarget, lore);
-            Component componentLore = messagePipeline.build(loreContext);
+            Component componentLore = messagePipeline.build(MessageContext.builder()
+                    .sender(fTarget)
+                    .message(lore)
+                    .build()
+            );
 
             String subId = id + "_" + i;
 
