@@ -17,7 +17,7 @@ import net.flectone.pulse.platform.adapter.PlatformPlayerAdapter;
 import net.flectone.pulse.platform.controller.ModuleController;
 import net.flectone.pulse.service.FPlayerService;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 @Singleton
@@ -53,6 +53,6 @@ public class MinecraftPacketBubbleListener implements PacketListener {
         WrapperPlayClientChatMessage wrapper = new WrapperPlayClientChatMessage(event);
         String message = wrapper.getMessage();
 
-        bubbleModule.add(fPlayer, message, Collections.emptyList());
+        bubbleModule.add(fPlayer, message, List.of());
     }
 }
